--- a/BackApi/APIServiceFactory/APIServiceFactory.csproj
+++ b/BackApi/APIServiceFactory/APIServiceFactory.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IImporter\IImporter.csproj" />
+  </ItemGroup>
+
 </Project>
